--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,6 +14,19 @@
 
 </head>
 <body>
-    
+    <section class="c-dashboard">
+        <form class="c-card" action="#">
+            <div class="c-card__body">
+                test
+            </div>
+        </form>
+    </section>
+    <section class="c-dashboard">
+        <form class="c-card" action="#">
+            <div class="c-card__body">
+                test
+            </div>
+        </form>
+    </section>
 </body>
 </html>
