--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,14 +15,13 @@
 </head>
 <body>
     <section class="c-dashboard">
-        <form class="c-card" action="#">
+        <form class="c-card c-dashboard__item" action="#">
             <div class="c-card__body">
                 test
             </div>
         </form>
-    </section>
-    <section class="c-dashboard">
-        <form class="c-card" action="#">
+    
+        <form class="c-card c-dashboard__item" action="#">
             <div class="c-card__body">
                 test
             </div>
