--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,21 +11,42 @@
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
-
 </head>
 <body>
-    <section class="c-dashboard">
-        <form class="c-card c-dashboard__item" action="#">
-            <div class="c-card__body">
-                test
+    <section class="o-row o-row--lg o-row--login" >
+        <div class=" o-container u-max-width-lg">
+            <div class="c-dashboard">        
+                    <form class="c-card u-grid-x-1 u-grid-y-1 " action="#">
+                        <div class="c-card__body">
+                            <div>
+                                <figure class="c-figure "> 
+                                    <img class=" c-img" src="./img/leerling.jpg" alt="leerling img">
+                                </figure>  
+                            </div>
+                            <div class="c-card__space">
+                                <h4>Leerling</h4>
+                                <p>Start een nieuw spel !</p>
+                                <a class="" href="">Starten</a>
+                            </div>
+                        </div>
+                    </form>   
+                    <form class="c-card u-grid-x-1 u-grid-y-1" action="#">
+                        <div class="c-card__body">
+                            <div>
+                                <figure class="c-figure "> 
+                                    <img class=" c-img" src="./img/leerkracht.png" alt="leerkracht img">
+                                </figure>  
+                            </div>
+                            <div class="c-card__space">
+                                <h4>Leerkracht</h4>
+                                <p>Nieuwe vragen toevoegen.</p>
+                                <a class="" href="">Inloggen</a>
+                            </div>
+                        </div>   
+                    </form>
+                </div>
             </div>
-        </form>
-    
-        <form class="c-card c-dashboard__item" action="#">
-            <div class="c-card__body">
-                test
-            </div>
-        </form>
+        </div>
     </section>
 </body>
 </html>
