--- a/Frontend/leerkrachtenlogin/index.html
+++ b/Frontend/leerkrachtenlogin/index.html
@@ -20,12 +20,15 @@
         <script src="scripts/validation.js"></script>
     </head>
     <body>
+        <div class="c-background">
         <section class="o-row o-row--lg o-row--login">
             <div class="o-container u-max-width-xs">
                 <form class="c-card" action="#">
                     <div class="c-card__body">
                         <h2 class="c-logo">
-                            <img class="c-logo__symbol" src="Logo_Howest_web/Howest_hogeschool-logo_RGB-BLAUW.png" alt="Logo howest" >
+                            <label class="c-label-logo">
+                                Move for fortune
+                            </label>
                         </h2>
                         <p class="c-form-field js-username-field ">
                             <label class="c-label" for="username">
@@ -74,8 +77,9 @@
                         </p>
                     </div>
                 </form>
-
+                
             </div>
         </section>
+        </div>
     </body>
 </html>
