Vragen scherm basis opstelling
layout aangepast profile icon toegevoegd

--- a/Frontend/keuzeavatar.html
+++ b/Frontend/keuzeavatar.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section class="o-row o-row--lg o-row--login" >
-        <div class=" o-container u-max-width-lg">
+        <div class=" o-container u-max-width-sm">
             <div class="c-dashboard__avatar">         
                     <form class="c-card u-grid-x-1 u-grid-y-1" action="#">
                         <div class="c-card__body">
