--- a/Frontend/vragen.html
+++ b/Frontend/vragen.html
@@ -12,35 +12,50 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
 </head>
-<body>
+<body class="testincolor">
     <section class="o-row o-row--lg o-row--login" >
         <div class=" o-container u-max-width-lg">
+            <div class="u-grid-x-1 u-grid-y-1">
+                <div class="c-img__center">
+                    <figure class="c-figure "> 
+                        <img class=" c-img" src="./img/profileIconVoetbal.png" alt="leerkracht img">
+                    </figure>  
+                </div> 
+                <div class="c-img__center">
+                    <h2 class="c-color_white">Team A</h2>
+                </div>
+            </div>
             <div class="c-dashboard__vragen">
-                <div class=" c-dashboard__item c-card__vragen u-grid-x-3 u-grid-y-1">
-                    <div class="c-card__vragenheader">
-                       vraag
+                <div class=" u-grid-x-3 u-grid-y-1">
+                    <div class="c-img__center">
+                       <h3 class="c-zero_margin c-color_white">Wat is juf Ann haar favoriete kleur?</h3>
 
                     </div>                    
                 </div>
             </div>
-            <div class="c-dashboard__avatar">         
-                <form class=" c-dashboard__item c-card u-grid-x-1 u-grid-y-1" action="#">
+            <div class="c-dashboard__antwoorden">
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
-                        <div class="c-card__space">
-                            <div class="">                                
-                                <h4>A: groen</h4>
-                                <h4>B: blauw</h4>
-                                <h4>C: rood</h4>
-                                <h4>D: groen</h4>
-                            </div>
-                            <div class="c-spacing">
-                                <a class="" href="">Terug</a>
-                                <a class="" href="">Volgende</a>
-                            </div>
-                        </div>
-                    </div>   
-                </form>
+                        <h4 class="c-img__center">A: groen</h4>
+                    </div>
+                </div>
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                    <div class="c-card__body">
+                        <h4 class="c-img__center">B: blauw</h4>
+                    </div>
+                </div>
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                    <div class="c-card__body">
+                        <h4 class="c-img__center">C: rood</h4>                    
+                    </div>
+                </div>
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                    <div class="c-card__body">
+                        <h4 class="c-img__center">D: groen</h4>
+                    </div>
+                </div>
             </div>
+            
         </div>
     </section>
 </body>
