Basis js avatar scherm en testfiles
js avatar=> vervangen van button en naam opslaan zonder refresh. communicatie backend: ERROR 500 2maal zelfde avtar kan niet moet aangepast worden 
test makeymakey: input van toetsenbord of makeymakey gemaakt

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,7 +26,7 @@
                             <div class="c-card__space">
                                 <h4>Leerling</h4>
                                 <p>Start een nieuw spel !</p>
-                                <a class="" href="">Starten</a>
+                                <a class="" href="./keuzeavatar.html">Starten</a>
                             </div>
                         </div>
                     </form>   
