--- a/Frontend/keuzeavatar.html
+++ b/Frontend/keuzeavatar.html
@@ -7,7 +7,7 @@
     <title>Avatar keuze team 1</title>
 
     <!-- script -->
-    <script src="./scripts/app.js"></script>
+    <script src="./scripts/avatar.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
@@ -26,7 +26,7 @@
                             <div class="c-card__space">
                                 <h4>Team naam groep 1</h4>
                                 <input class="c-input" type="text" name="username" id="username" placeholder="Groene Schoen" required>
-                                <a class="" href="">Volgende</a>
+                                <a class="js-volgende" href="#">Volgende</a>
                             </div>
                         </div>   
                     </form>
