--- a/Frontend/keuzeavatar.html
+++ b/Frontend/keuzeavatar.html
@@ -28,6 +28,7 @@
                                 <input class="c-input" type="text" name="username" id="username" placeholder="Groene Schoen" required>
                                 <a class="js-volgende" href="#">Volgende</a>
                             </div>
+                            <p class="test"></p>
                         </div>   
                     </form>
                 </div>
