--- a/Frontend/loadscreen.html
+++ b/Frontend/loadscreen.html
@@ -9,33 +9,32 @@
     <!-- script -->
   
     <script src="./scripts/loadingsscreen.js"></script>
-    <script src="./scripts/dataHandler.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/screenaiko.css">
+    <link rel="stylesheet" href="css/screen.css">
     <link rel="stylesheet" href="css/gradient.css">
 </head>
 <body>
     <section class="o-row o-row--lg o-row--login" >
         <div class="o-container u-max-width-lg">
-            <div class="c-selectgrid ">
-                <select name="js-select" id="js-select" class="c-select js-select">
+            <div class="c-dashboard_onderwerpen">
+                <select name="select" id="select" class=" u-grid-x-3 u-grid-y-1 js-select">
                     <option>
-                        onderwerp
+                        kies een onderwerp
                     </option>
                 </select> 
-                <button class="c-btn-startgame">Start Game</button>
+                <button class="u-grid-x-1 u-grid-y-1 js-button_startGame">Start Game</button>
             </div>
-            <div class="c-dashboard">     
+            <div class="c-dashboard_loading">     
                     <form class="c-card u-grid-x-1 u-grid-y-1 " action="#">
                         <div class="c-card__body">
                             <div>
                                 <figure class="c-figure "> 
-                                    <img class=" c-img" src="./fotos/voetbalTest.png" alt="leerling img">
+                                    <img class=" c-img" src="./img/voetbalTest.png" alt="leerling img">
                                 </figure>  
                             </div>
                             <div class="c-card__space">
-                                <h1 class="c-teamname">IIIIIIIIIIIII</h1>
+                                <h1 class="c-img__center js-teamA">IIIIIIIIIIIII</h1>
                             </div>
                         </div>
                     </form>   
@@ -43,16 +42,14 @@
                         <div class="c-card__body">
                             <div>
                                 <figure class="c-figure "> 
-                                    <img class=" c-img" src="./fotos/voetbalTest.png" alt="leerkracht img">
+                                    <img class=" c-img" src="./img/voetbalTest.png" alt="leerkracht img">
                                 </figure>  
                             </div>
                             <div class="c-card__space">
-                                <h1 class="c-teamname">TeamB</h1>
+                                <h1 class="c-img__center js-teamB">TeamB</h1>
                             </div>
                         </div>   
                     </form>
-                </div>
-            </div>
             </div>
         </div>
     </section>
