--- a/Frontend/loadscreen.html
+++ b/Frontend/loadscreen.html
@@ -9,6 +9,7 @@
     <!-- script -->
   
     <script src="./scripts/loadingsscreen.js"></script>
+    <script src="./scripts/cookies.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
