--- a/Frontend/vragen.html
+++ b/Frontend/vragen.html
@@ -7,7 +7,8 @@
     <title>vragen</title>
 
     <!-- script -->
-    <script src="./scripts/app.js"></script>
+    <script src="./scripts/vragen.js"></script>
+    <script src="./scripts/dataHandler.js"></script>
     <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
@@ -27,28 +28,28 @@
             </div>
             <div class="c-dashboard__vragen">
                 <div class=" u-grid-x-3 u-grid-y-1">
-                    <div class="c-img__center">
+                    <div class="js-vragen c-img__center">
                        <h3 class="c-zero_margin c-color_white">Wat is juf Ann haar favoriete kleur?</h3>
                     </div>                    
                 </div>
             </div>
-            <div class="c-dashboard__antwoorden">
-                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+            <div class="js-antwoord c-dashboard__antwoorden">
+                <div id="card-a" class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
                         <h4 class="c-img__center">A: groen</h4>
                     </div>
                 </div>
-                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div id="card-b" class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
                         <h4 class="c-img__center">B: blauw</h4>
                     </div>
                 </div>
-                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div id="card-c" class="c-card-c c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
                         <h4 class="c-img__center">C: rood</h4>                    
                     </div>
                 </div>
-                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div id="card-d" class="c-card-d c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
                         <h4 class="c-img__center">D: groen</h4>
                     </div>
