--- a/Frontend/keuzeavatar.html
+++ b/Frontend/keuzeavatar.html
@@ -24,7 +24,7 @@
                                 </figure>  
                             </div>
                             <div class="c-card__space">
-                                <h4>Team naam groep 1</h4>
+                                <h4 class="js-name">Team naam groep 1</h4>
                                 <input class="c-input" type="text" name="username" id="username" placeholder="Groene Schoen" required>
                                 <a class="js-volgende" href="#">Volgende</a>
                             </div>
