--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -6,11 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="scripts/testMakeyMakey.js"></script>
+<!--     <script src="scripts/testfetch.js"></script>
+ -->    <script src="scripts/testbackgroundster.js"></script>
+    <link rel="stylesheet" href="css/testbackgroundster.css">
+
 
 </head>
 <body>
-    <input class="c-input " type="text" name="username" id="username" placeholder="Groene Schoen" required>
+<!--     <input class="c-input " type="text" name="username" id="username" placeholder="Groene Schoen" required>
     <a class="js-volgende" href="#">Volgende</a>
-  
-</body>
+    <div></div> -->
+<!--     <img src="./img/ster groot.svg" alt="">
+    aaaaaaaaaaaaaaaaaaaaa
+ -->
+aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+<a href="">aera</a>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+<p>are</p>
+a
+a</body>
 </html>
