design css index teacher

--- a/Frontend/total/index.html
+++ b/Frontend/total/index.html
@@ -25,7 +25,7 @@
                     <div class="c-card__body">
                         <h2 class="c-logo">
                             <label class="c-label-logo">
-                                Move for fortune
+                                <span class="c-dot"></span>
                             </label>
                         </h2>
                         <p class="c-form-field js-username-field ">
