Scherm - Game - Vragen bekijken - Error
- Fout bij het aanduiden van het juiste antwoord
- 500 error aan de server-kant (nog bekijken)

--- a/Frontend/Game/vragen.html
+++ b/Frontend/Game/vragen.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/screen.css">
 </head>
 
-<body class="testincolor">
+<body>
     <section class="o-row o-row--lg o-row--login">
         <div class=" o-container u-max-width-lg">
             <div class="u-grid-x-1 u-grid-y-1">
@@ -33,29 +33,29 @@
             <div class="c-dashboard__vragen">
                 <div class=" u-grid-x-3 u-grid-y-1">
                     <div class="js-vragen c-img__center">
-                        <h3 class="c-zero_margin c-color_white js-question">Wat is juf Ann haar favoriete kleur?</h3>
+                        <h3 class="c-zero_margin js-question">Wat is juf Ann haar favoriete kleur?</h3>
                     </div>
                 </div>
             </div>
             <div class="js-antwoord c-dashboard__antwoorden">
-                <div id="card-a" class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
-                        <h4 class="c-img__center js-answer">A: groen</h4>
+                        <h4 class="c-img__center c-answer js-answer">A: groen</h4>
                     </div>
                 </div>
-                <div id="card-b" class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
-                        <h4 class="c-img__center js-answer">B: blauw</h4>
+                        <h4 class="c-img__center c-answer js-answer">B: blauw</h4>
                     </div>
                 </div>
-                <div id="card-c" class="c-card-c c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div class="c-card-c c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
-                        <h4 class="c-img__center js-answer">C: rood</h4>
+                        <h4 class="c-img__center c-answer js-answer">C: rood</h4>
                     </div>
                 </div>
-                <div id="card-d" class="c-card-d c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
+                <div class="c-dashboard__item c-card__antwoorden  u-grid-x-1 u-grid-y-1">
                     <div class="c-card__body">
-                        <h4 class="c-img__center js-answer">D: groen</h4>
+                        <h4 class="c-img__center c-answer js-answer">D: groen</h4>
                     </div>
                 </div>
             </div>
