Html en css van design
alle html en css gemaakt van de design. 
--fonts en grote van lettertype moeten nog gekozen worden

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,46 +7,31 @@
     <title>Login</title>
 
     <!-- script -->
-    <script src="./scripts/app.js"></script>
-    <!-- css -->
+<!--     <script src="./scripts/app.js"></script>
+ -->    <!-- css -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
 </head>
 <body>
     <section class="o-row o-row--lg o-row--login" >
-        <div class=" o-container u-max-width-lg">
-            <div class="c-dashboard">        
-                    <form class="c-card u-grid-x-1 u-grid-y-1 " action="#">
-                        <div class="c-card__body">
-                            <div>
-                                <figure class="c-figure "> 
-                                    <img class=" c-img" src="./img/leerling.jpg" alt="leerling img">
-                                </figure>  
-                            </div>
-                            <div class="c-card__space">
-                                <h4>Leerling</h4>
-                                <p>Start een nieuw spel !</p>
-                                <a class="" href="./keuzeavatar.html">Starten</a>
-                            </div>
-                        </div>
-                    </form>   
-                    <form class="c-card u-grid-x-1 u-grid-y-1" action="#">
-                        <div class="c-card__body">
-                            <div>
-                                <figure class="c-figure "> 
-                                    <img class=" c-img" src="./img/leerkracht.png" alt="leerkracht img">
-                                </figure>  
-                            </div>
-                            <div class="c-card__space">
-                                <h4>Leerkracht</h4>
-                                <p>Nieuwe vragen toevoegen.</p>
-                                <a class="" href="">Inloggen</a>
-                            </div>
-                        </div>   
-                    </form>
-                </div>
+        <div class=" o-container u-max-width-lg">    
+            <div  class="c-dashboard_star">               
+                <button  class="c-button c-img__center">
+                    <svg class="c-icon" xmlns="http://www.w3.org/2000/svg" width="47" height="59" viewBox="0 0 47 59">
+                    <g id="Polygon_53" data-name="play" transform="translate(47) rotate(90)" fill="#474242">
+                    <path d="M 55.38336181640625 46.00000381469727 L 3.616640090942383 46.00000381469727 C 3.084379911422729 46.00000381469727 2.827339887619019 45.63910293579102 2.74153995513916 45.48394393920898 C 2.655730009078979 45.32877349853516 2.486700057983398 44.91919326782227 2.769659996032715 44.4683723449707 L 28.65300941467285 3.23048210144043 C 28.91835021972656 2.807742118835449 29.33373069763184 2.762102127075195 29.5 2.762102127075195 C 29.66626930236816 2.762102127075195 30.08164978027344 2.807742118835449 30.34699058532715 3.23048210144043 L 56.23035049438477 44.4683837890625 C 56.51330947875977 44.91919326782227 56.34428024291992 45.32876205444336 56.25846862792969 45.48393249511719 C 56.17266082763672 45.63910293579102 55.91561889648438 46.00000381469727 55.38336181640625 46.00000381469727 Z" stroke="none"/>
+                    <path d="M 29.5 3.762104034423828 L 3.61663818359375 45.00000381469727 L 55.38336181640625 45.00000381469727 L 29.5 3.762104034423828 M 29.5 1.762096405029297 C 30.1509952545166 1.762096405029297 30.8019905090332 2.074352264404297 31.1939697265625 2.698863983154297 L 57.07733154296875 43.93676376342773 C 57.9133415222168 45.26872253417969 56.95595169067383 47.00000381469727 55.38336181640625 47.00000381469727 L 3.61663818359375 47.00000381469727 C 2.044048309326172 47.00000381469727 1.086650848388672 45.26872253417969 1.92266845703125 43.93676376342773 L 27.8060302734375 2.698863983154297 C 28.1980094909668 2.074352264404297 28.8490047454834 1.762096405029297 29.5 1.762096405029297 Z" stroke="none" fill="#404040"/>
+                    </g>
+                    </svg> 
+                    Speel een spel!
+                </button>
             </div>
+            <div style="position: absolute; top:2rem; right:4rem;">
+                <button class="c-button c-img__center" style="">Leerkrachten</button>
+            </div>
+            <img class="c-maan" src="https://aikovanryssel.github.io/project2IMG/img/svg/maan.svg" alt="">
+            <img class="c-raket" src="https://aikovanryssel.github.io/project2IMG/img/svg/raketindex.svg" alt="raket">
         </div>
-    </section>
+    </section> 
 </body>
 </html>
