Scherm Game - Javascript

--- a/Frontend/Game/vragen.html
+++ b/Frontend/Game/vragen.html
@@ -21,10 +21,10 @@
     <section class="o-row o-row--lg o-row--login">
         <div class=" o-container u-max-width-lg">
             <div class="u-grid-x-1 u-grid-y-1">
-                <div class="c-img__center">
-                    <figure class="c-figure ">
+                <div class="c-img__center c-img__circle">
+                    <!-- <figure class="c-figure ">
                         <img class=" c-img" src="./img/profileIconVoetbal.png" alt="leerkracht img">
-                    </figure>
+                    </figure> -->
                 </div>
                 <div class="c-img__center">
                     <h2 class="c-color_white js-teamName--playing">Team A</h2>
