API - Avatar - SQL gewijzigd
- We gebruiken enkel de naam in de database

--- a/Frontend/Game/vragen.html
+++ b/Frontend/Game/vragen.html
@@ -21,7 +21,11 @@
     <section class="o-row o-row--lg o-row--login">
         <div class=" o-container u-max-width-lg">
             <div class="u-grid-x-1 u-grid-y-1">
-                <div class="c-img__center c-img__circle">
+                <div class="c-img__center">
+                    <div class="c-img__circle">
+                        <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg"
+                            alt="Avatar (raket) Team">
+                    </div>
                     <!-- <figure class="c-figure ">
                         <img class=" c-img" src="./img/profileIconVoetbal.png" alt="leerkracht img">
                     </figure> -->
