--- a/Frontend/Game/vragen.html
+++ b/Frontend/Game/vragen.html
@@ -23,12 +23,9 @@
             <div class="u-grid-x-1 u-grid-y-1">
                 <div class="c-img__center">
                     <div class="c-img__circle">
-                        <img src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg"
+                        <img class="js-img__playing-team-avatar" src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg"
                             alt="Avatar (raket) Team">
                     </div>
-                    <!-- <figure class="c-figure ">
-                        <img class=" c-img" src="./img/profileIconVoetbal.png" alt="leerkracht img">
-                    </figure> -->
                 </div>
                 <div class="c-img__center">
                     <h2 class="c-color_white js-teamName--playing">Team A</h2>
@@ -66,6 +63,9 @@
 
         </div>
     </section>
+    <div class="c-planet">
+        <img src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg" alt="Planeet team A">
+    </div>
 </body>
 
 </html>
