Scherm - Game leerlignen - Raket beweegt
- Functie om raket naar boven te laten vliegen

--- a/Frontend/Game/vragen.html
+++ b/Frontend/Game/vragen.html
@@ -23,7 +23,8 @@
             <div class="u-grid-x-1 u-grid-y-1">
                 <div class="c-img__center">
                     <div class="c-img__circle">
-                        <img class="js-img__playing-team-avatar" src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg"
+                        <img class="js-img__playing-team-avatar"
+                            src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg"
                             alt="Avatar (raket) Team">
                     </div>
                 </div>
@@ -63,9 +64,24 @@
 
         </div>
     </section>
-    <div class="c-planet">
-        <img src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg" alt="Planeet team A">
-    </div>
+    <img class="c-score c-score__planet-team-a"
+        src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg"
+        alt="Planeet team A">
+    <!-- <div class="c-score c-score__planet-team-a">
+        <img src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg"
+            alt="Planeet team A">
+    </div> -->
+    <img class="c-score c-score__raket-team-a js-rocket"
+        src="https://aikovanryssel.github.io/project2IMG/img/raketrecht/svg/raketdonkerroodroze.svg" alt="Raket team A">
+    <!-- <div class="c-score c-score__raket-team-a js-rocket">
+        <img src="https://aikovanryssel.github.io/project2IMG/img/raketrecht/svg/raketdonkerroodroze.svg"
+            alt="Raket team A">
+    </div> -->
+    <img class="c-score c-score__planet-team-b"
+        src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg"
+        alt="Planeet team B">
+    <img class="c-score c-score__raket-team-b js-rocket"
+        src="https://aikovanryssel.github.io/project2IMG/img/raketrecht/svg/raketdonkerroodroze.svg" alt="Raket team B">
 </body>
 
 </html>
