--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -27,10 +27,10 @@
                 </button>
             </div>
             <div style="position: absolute; top:2rem; right:4rem;">
-                <button class="c-button c-img__center" style="">Leerkrachten</button>
+                <button class="c-button c-img__center">Leerkrachten</button>
             </div>
             <img class="c-maan" src="https://aikovanryssel.github.io/project2IMG/img/svg/maan.svg" alt="">
-            <img class="c-raket" src="https://aikovanryssel.github.io/project2IMG/img/svg/raketindex.svg" alt="raket">
+            <img class="c-raket" src="https://aikovanryssel.github.io/project2IMG/img/svg/raketindex.svg" alt="raket">            
         </div>
     </section> 
 </body>
