--- a/Frontend/Game/vragen.html
+++ b/Frontend/Game/vragen.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="c-img__center">
-                    <h2 class="c-color_white js-teamName--playing">Team A</h2>
+                    <h2 class="js-teamName--playing">Team A</h2>
                 </div>
             </div>
             <div class="c-dashboard__vragen">
@@ -64,20 +64,19 @@
 
         </div>
     </section>
-    <img class="c-score c-score__planet-team-a"
+    <div class="c-winner">
+        <h1>Bedankt MoonRocket jij Bent de winnaar!</h1>
+        <h1>Punten: 400</h1>
+    </div>
+    <img class="js-img__winning-team"
+        src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketdonkerroodroze.svg"
+        alt="Avatar (raket) Team winning team">
+    <img class="c-score c-score__planet-team-a js-planet"
         src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg"
         alt="Planeet team A">
-    <!-- <div class="c-score c-score__planet-team-a">
-        <img src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg"
-            alt="Planeet team A">
-    </div> -->
     <img class="c-score c-score__raket-team-a js-rocket"
         src="https://aikovanryssel.github.io/project2IMG/img/raketrecht/svg/raketdonkerroodroze.svg" alt="Raket team A">
-    <!-- <div class="c-score c-score__raket-team-a js-rocket">
-        <img src="https://aikovanryssel.github.io/project2IMG/img/raketrecht/svg/raketdonkerroodroze.svg"
-            alt="Raket team A">
-    </div> -->
-    <img class="c-score c-score__planet-team-b"
+    <img class="c-score c-score__planet-team-b js-planet"
         src="https://aikovanryssel.github.io/project2IMG/img/planeet/svg/Component%2026%20%E2%80%93%201.svg"
         alt="Planeet team B">
     <img class="c-score c-score__raket-team-b js-rocket"
