--- a/Frontend/loadscreen.html
+++ b/Frontend/loadscreen.html
@@ -27,10 +27,10 @@
             </div>
 
             <div  class="c-dashboard_loading">
-                <div class="c-olievlek">
-                    <img class="c-img-scale" src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg"  alt="raket team 1">
+                <div class="c-olievlek c-img__center">
+                    <img class="c-img-scale " src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg"  alt="raket team 1">
                </div>
-                <div class="c-olievlek">
+                <div class="c-olievlek c-img__center">
                     <img class="c-img-scale" src="https://aikovanryssel.github.io/project2IMG/img/raket/svg/raketorangeorange.svg" alt="raket team 2">
                 </div>
             </div>
