--- a/Frontend/loadscreen.html
+++ b/Frontend/loadscreen.html
@@ -18,8 +18,8 @@
     <section class="o-row o-row--lg o-row--login" >
         <div class="o-container u-max-width-lg">
             <div class="c-dashboard_onderwerpen">
-                <select name="select" id="select" class=" c-select u-grid-x-3 u-grid-y-1 js-select">
-                    <option>
+                <select name="select" id="select" class="c-select u-grid-x-3 u-grid-y-1 js-select">
+                    <option class="" id="kies">
                         kies een onderwerp
                     </option>
                 </select> 
